Changes after KPresenter 1.1
============================
- Port to kotext
- New effect : kpresenter can play sounds
- Thumbnail mode for the sidebar
- Add notebar
- Add a real statusbar
- Add New Tool : freehand, polyline, quadric bezier curve, cubic bezier curve, convex/concave polygon