@@ -6,3 +6,6 @@ Changes after KPresenter 1.1
 - Add notebar
 - Add a real statusbar
 - Add New Tool : freehand, polyline, quadric bezier curve, cubic bezier curve, convex/concave polygon
+- Add zoom support
+- Improve undo/redo (now we can undo/redo "insert new page"/"delete page")
+- Now kpresenter has real page
